Limit the width to a sensible value so text will still be readable when you maximize your browser window. Add formatting for <emphasis>. Correct whitespace handling for <screen>.
git-svn-id: http://varnish.projects.linpro.no/svn/trunk@1939 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-doc/share/docbook-xml.css
+++ b/varnish-doc/share/docbook-xml.css
@@ -5,6 +5,7 @@ article, book {
 	color: black;
 	font-family: sans-serif;
 	margin: 1in;
+	max-width: 80ex;
 }
 
 /*
@@ -228,6 +229,13 @@ xref:after {
 }
 
 /*
+ * Formatting
+ */
+emphasis {
+	font-style: italic;
+}
+
+/*
  * Misc
  */
 command {
@@ -264,5 +272,6 @@ screen {
 	border: thin solid black;
 	background-color: #ccc;
 	font-family: monospace;
+	white-space: pre;
 	padding: 0.5ex;
 }
